--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     .loc-actions{
       display:flex;
       flex-direction:column;
-      gap:10px;
+      gap:12px;
       margin-top:16px;
     }
     .loc-btn{
@@ -574,13 +574,13 @@
           <div>
             <p class="loc-name">[GRAND BLANC] Mirabelle Garden</p>
             <p class="loc-addr">Busan, Haeundae-gu, Centum area (그랜드블랑 미라벨 가든)</p>
-            <p class="loc-addr">3rd Floor, Grand Blanc Wedding Hall</p>
+            <p class="loc-addr">8th Floor, Grand Blanc Wedding Hall</p>
           </div>
         </div>
 
         <button type="button" class="loc-copy-row" id="btnCopyAddr">
           <span class="loc-copy-text" id="locCopyText">
-            Busan, Haeundae-gu, Centum area, Grand Blanc Wedding Hall, Mirabelle Garden (3F)
+            Busan, Haeundae-gu, Centum area, Grand Blanc Wedding Hall, Mirabelle Garden (8F)
           </span>
           <span class="loc-copy-icon">
             📋 Copy Address
