--- a/index.html
+++ b/index.html
@@ -586,9 +586,9 @@
         </div>
 
         <button type="button" class="loc-copy-row" id="btnCopyAddr">
-          <span class="loc-copy-text" id="locCopyText">
+          <!-- <span class="loc-copy-text" id="locCopyText">
             Busan, Haeundae-gu, Centum area, Grand Blanc Wedding Hall, Mirabelle Garden (8F)
-          </span>
+          </span> -->
           <span class="loc-copy-icon">
             📋 Copy Address
           </span>
