--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
           </div>
           <div>
             <div class="muted">Venue</div>
-            <h3 style="margin:6px 0 0">[GRAND BLANC] [Mirabelle Garden]</h3>
+            <h3 style="margin:6px 0 0">GRAND BLANC</h3>
           </div>
         </div>
         <div style="height:12px"></div>
@@ -579,9 +579,9 @@
         <div class="loc-main-header">
           <div class="loc-icon">📍</div>
           <div>
-            <p class="loc-name">[GRAND BLANC] Mirabelle Garden</p>
-            <p class="loc-addr">Busan, Haeundae-gu, Centum area (그랜드블랑 미라벨 가든)</p>
-            <p class="loc-addr">8th Floor, Grand Blanc Wedding Hall</p>
+            <p class="loc-name">GRAND BLANC Wedding Hall, 8F “Mirabelle Garden”</p>
+            <p class="loc-addr">25 Centum 1-ro, Haeundae-gu, Busan 48060, Republic of Korea </p>
+            <p class="loc-addr">그랜드블랑 미라벨 가든</p>
           </div>
         </div>
 
