--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     .loc-copy-icon{
       font-size:12px;
       color:#9a7f5a;
-      display:flex;
+      display:inline-flex;
       align-items:center;
       gap:4px;
     }
